// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link.svelte > should render empty when field mapping is invalid 1`] = `
<div>
  <a>
    <!---->
    <!---->
    
    
    <!---->
     
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render icon 1`] = `
<div>
  <a
    href="/"
  >
    <!---->
    <rkt-icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </rkt-icon>
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render icon based on state 1`] = `
<div>
  <a>
    <!---->
    <rkt-icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </rkt-icon>
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render image 1`] = `
<div>
  <a
    href="https://example.com"
  >
    <!---->
    <!---->
    <img
      alt="hello"
      class="min-h-4 min-w-4 object-cover"
      src="https://example.com/img.png"
    />
    
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render image and icon 1`] = `
<div>
  <a>
    <!---->
    <rkt-icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </rkt-icon>
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render null 1`] = `
<div>
  <a>
    <!---->
     
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render object 1`] = `
<div>
  <a
    href="#"
  >
    <!---->
    <!---->
    
    
    <!---->
     
    <p>
      #
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should render using field mapping 1`] = `
<div>
  <a
    href="https://example.com"
  >
    <!---->
    <rkt-icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </rkt-icon>
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;

exports[`Link.svelte > should update when value changes 1`] = `
<div>
  <a>
    <!---->
    <!---->
    
    
    <!---->
     
    <p>
      hello
    </p>
    <!---->
  </a>
  
</div>
`;
